# mobile

./: .gitignore  README.md  pyproject.toml
documents/dds/: build_dds_event.md  build_dds_move_event.md
documents/dim/: build_dim_oksm.md  build_dim_oktmo.md  build_dim_tac.md  build_dim_time_zones.md
documents/dq/: README.md
documents/dq/dds/: dq_dds_event.md
documents/dq/dim/: dq_dim_oksm.md  dq_dim_oktmo.md  dq_dim_tac.md  dq_dim_time_zones.md
documents/dq/fct/: dq_fct_bs.md  dq_fct_geo_intervals.md  dq_fct_msisdn_imei.md  dq_fct_msisdn_imsi_operator.md  dq_fct_person.md
documents/dq/src/: dq_src_bs.md  dq_src_excl.md  dq_src_mobile.md  dq_src_person.md
documents/dq/stg/: dq_dim_oksm.md  (+14 more)
documents/fct/: build_fct_bs.md  build_fct_geo_intervals.md  build_fct_msisdn_imei.md  build_fct_msisdn_imsi_operator.md  build_fct_person.md
documents/nb/: nb_perf_metrics.md
documents/pipelines/: prod_run_order.md
documents/src/: build_src_bs.md  build_src_excl.md  build_src_mobile.md  build_src_person.md
documents/stg/: build_dim_oksm.md  build_dim_oktmo.md  build_dim_tac.md  build_dim_time_zones.md  build_move_event.md  build_stg_bs.md  build_stg_day.md  build_stg_event.md  build_stg_geo_all.md  build_stg_geo_intervals.md  build_stg_msisdn_imei.md  build_stg_msisdn_imsi.md  build_stg_msisdn_imsi_operator.md  build_stg_msisdn_operator.md  build_stg_oksm.md  build_stg_oktmo.md  build_stg_person.md  build_stg_tac.md  build_stg_time_zones.md
src/mobile/: __init__.py  __main__.py  cli.py  cli_defaults.py  command_timing.py  logging_config.py  notebook_runner.py  project_paths.py  readme_stats.py
(+131 files in other folders)
