[project]
name = "mobile"
version = "0.1.0"
description = "Mobile OSS pipelines"
readme = "README.md"
authors = [
    { name = "PPKorchagin", email = "korchagin.pavlik@mail.ru" }
]
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "matplotlib>=3.10.0",
    "ipykernel>=7.2.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
]

[project.scripts]
mobile = "mobile.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
